--- a/.github/workflows/update_graph.yml
+++ b/.github/workflows/update_graph.yml
@@ -1,9 +1,10 @@
 name: Update Custom Graph
 on:
-  schedule:
-    - cron: "0 0 * * *"  # Daily at midnight UTC
-  workflow_dispatch:
-
+    push:
+        branches:
+            - main
+        paths-ignore:
+            - graph.svg
 jobs:
   build:
     runs-on: ubuntu-latest
